Add new item to download optional libraries and automatically select them
git-svn-id: http://talendforge.org/svn/tos/trunk@111023 f6f1c999-d317-4740-80b0-e6d1abc6f99e